Home y Detalles ya funcionales, pero faltan cosas
Agregué el home que es la actividad principal. Allí se muestra una lista de etiquetas y de campañas de crowdfunding. Al clickear en alguna campaña se redirige hacia la actividad detalle, que muestra los detalles del crowdfunding y permite contactar con el emprendedor. Ahora bien, faltan las siguientes funcionalidades: Filtrar campañas por etiqueta, agregar items a la toolbar y navbar,  y poder contactarse con el emprendedor.

--- a/Fintech_NoCountry/app/src/main/res/values/colors.xml
+++ b/Fintech_NoCountry/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="Primary950">#17263A</color>
+    <color name="etiquetaSinSeleccion">#C9DBEE</color>
+    <color name="gris_claro">#747476</color>
+    <color name="Secundary400">#FAEC15</color>
+    <color name="Black900">#3D3D3D</color>
+    <color name="Black500">#6D6D6D</color>
+    <color name="Black050">#F6F6F6</color>
+
 </resources>
