--- a/Fintech_NoCountry/app/src/main/res/layout/activity_main.xml
+++ b/Fintech_NoCountry/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
-
+    <!-- TODO ESTO SE PUEDE BORRAR -->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
