Filtro por etiqueta y contactar emprendedor ya son funcionales
Agregué el filtro del home por etiquetas e implementé un bottom sheet para contactar al emprendedor en la actividad detalles. Las imagenes de las campañas de crowdfunding ahora se cargan mediante una url proporcionada por la base de datos. Quité la navbar y el mínimo de inversión porque no llegamos a tiempo

--- a/Fintech_NoCountry/app/src/main/res/menu/menu_home_navbar.xml
+++ b/Fintech_NoCountry/app/src/main/res/menu/menu_home_navbar.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/navbar_menu"
-        android:title="Menú"
-        android:icon="@drawable/navbar_mas"/>
+        android:title="Más"
+        android:icon="@drawable/navbar_mas"
+        />
     <item
         android:id="@+id/navbar_home"
         android:title="Home"
-        android:icon="@drawable/navbar_home"/>
+        android:icon="@drawable/navbar_home"
+        />
     <item
         android:id="@+id/navbar_fav"
-        android:title="Favoritos"
-        android:icon="@drawable/navbar_fav"/>
+        android:title="Fav"
+        android:icon="@drawable/navbar_fav"
+        />
 </menu>
