--- a/Fintech_NoCountry/app/src/main/res/drawable/boton_redondeado.xml
+++ b/Fintech_NoCountry/app/src/main/res/drawable/boton_redondeado.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFFFF"/>
     <corners android:radius="60dp"/>
+    <stroke android:color="@color/Black900"/>
 </shape>
