--- a/Fintech_NoCountry/app/src/main/res/layout/activity_home.xml
+++ b/Fintech_NoCountry/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/home_scroll_principal"
         android:layout_below="@id/home_toolbar"
-        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_centerInParent="true"
         >
 
