--- a/Fintech_NoCountry/app/src/main/res/layout/activity_registro.xml
+++ b/Fintech_NoCountry/app/src/main/res/layout/activity_registro.xml
@@ -173,4 +173,14 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/register_progressbar"
+        android:indeterminate="true"
+        android:layout_below="@id/register_layout"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        />
+
 </RelativeLayout>
